--- a/web/annotation_editor_layer_builder.css
+++ b/web/annotation_editor_layer_builder.css
@@ -19,16 +19,47 @@
   --freetext-line-height: 1.35;
   --freetext-padding: 2px;
   --editorFreeText-editing-cursor: text;
-  /*#if COMPONENTS*/
-  --editorInk-editing-cursor: pointer;
-  /*#else*/
   --editorInk-editing-cursor: url(pdf_viewer/web/images/cursor-editorInk.svg) 0 16, pointer;
-  /*#endif*/
+  --editorHighlight-editing-cursor: url(pdf_viewer/web/images/cursor-editorTextHighlight.svg)
+      24 24,
+    text;
+  --editorFreeHighlight-editing-cursor: url(pdf_viewer/web/images/cursor-editorFreeHighlight.svg)
+      1 18,
+    pointer;
+}
+
+/* The following class is used to hide an element but keep it available to
+ * for screen readers. */
+.visuallyHidden {
+  position: absolute;
+  top: 0;
+  left: 0;
+  border: 0;
+  margin: 0;
+  padding: 0;
+  width: 0;
+  height: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  font-size: 0;
+}
+
+.textLayer.highlighting {
+  cursor: var(--editorFreeHighlight-editing-cursor);
+
+  &:not(.free) span {
+    cursor: var(--editorHighlight-editing-cursor);
+  }
+
+  &.free span {
+    cursor: var(--editorFreeHighlight-editing-cursor);
+  }
 }
 
 @media (min-resolution: 1.1dppx) {
   :root {
-    --editorFreeText-editing-cursor: url(images/cursor-editorFreeText.svg) 0 16,
+    /*#if !COMPONENTS*/
+    --editorFreeText-editing-cursor: url(pdf_viewer/web/images/cursor-editorFreeText.svg) 0 16,
       text;
     /*#endif*/
   }
