--- a/web/viewer.css
+++ b/web/viewer.css
@@ -861,11 +861,11 @@ body {
   left: 6px;
 }
 
-.toolbarButton.saveButton {
+.toolbarButton.customButton {
   width: auto;
 }
 
-.toolbarButton.saveButton::before {
+.toolbarButton.customButton::before {
   content: none;
 }
 
