--- a/web/annotation_editor_layer_builder.css
+++ b/web/annotation_editor_layer_builder.css
@@ -74,6 +74,11 @@
   &.free span {
     cursor: var(--editorFreeHighlight-editing-cursor);
   }
+  /*#if COMPONENTS*/
+  --editorInk-editing-cursor: pointer;
+  /*#else*/
+  --editorInk-editing-cursor: url(pdf_viewer/web/images/cursor-editorInk.svg) 0 16, pointer;
+  /*#endif*/
 }
 
 @media (min-resolution: 1.1dppx) {
